take input and predict

--- a/templates/home.html
+++ b/templates/home.html
@@ -88,6 +88,10 @@
                 </div>
 
             </form>
+            <br>
+            <h2>
+                The Predicted Results: {{results}}
+            </h2>
         </div>
     </div>
 
